# fryzekconcepts

./: .gitignore  CNAME  about.html  deploy.sh  feed.xml  graphics_feed.xml  index.html  main.md  makefile  meson.build  now.html
assets/: style.css
html/: about.html  feed.xml  graphics_feed.xml  igalia_feed.xml  index.html  now.html
html/assets/: style.css
html/notes/: 2022_igalia_graphics_team.html  2024_igalia_graphics_team.html  android_swrast.html  baremetal-risc-v.html  converting_from_3d_to_2d.html  digital_garden.html  freedreno_journey.html  generating-video.html  global_game_jam_2023.html  mesa_23_1_contributions_behind_the_scenes.html  n64brew-gamejam-2021.html  rasterizing-triangles.html  vulkanised_2024.html
notes/: 2022_igalia_graphics_team.html  2022_igalia_graphics_team.md  2024_igalia_graphics_team.html  2024_igalia_graphics_team.md  android_swrast.html  android_swrast.md  baremetal-risc-v.html  baremetal-risc-v.md  converting_from_3d_to_2d.html  converting_from_3d_to_2d.md  digital_garden.html  digital_garden.md  freedreno_journey.html  freedreno_journey.md  generating-video.html  generating-video.md  global_game_jam_2023.md  mesa_23_1_contributions_behind_the_scenes.md  n64brew-gamejam-2021.html  n64brew-gamejam-2021.md  rasterizing-triangles.html  rasterizing-triangles.md  vulkanised_2024.html  vulkanised_2024.md
pages/: about.md  now.md
templates/: front_page.html  main.html  note.html
tools/: front_page.lua  link_gen.lua  meta_tools.lua  note.lua  pandoc-plantuml.py  rss_gen.py
